--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 eclipse_workspace/.metadata/
 /Interfaz/Compilador/target/
-compilador/target
+compilador/target/
 # Archivos compilados de Java
 *.class
 
